--- a/DockerFile
+++ b/DockerFile
@@ -1,29 +1,63 @@
 # Stage 1: Build stage
 FROM ubuntu:latest AS build
 
-# Update the package repository
-RUN apt-get update
+# Update the package repository and install OpenJDK 17 and Maven
+RUN apt-get update && apt-get install -y openjdk-17-jdk maven
 
-# Install OpenJDK 17 and Maven
-RUN apt-get install openjdk-17-jdk maven -y
+# Set the working directory to /build
+WORKDIR /build
 
-# Set the working directory
-WORKDIR /app
+# Copy the pom.xml and source code
+COPY pom.xml .
+COPY src ./src
 
-# Copy the source code into the container
-COPY . .
-
-# Build the Spring Boot application
-RUN ./mvnw package -DskipTests
+# Build the application (package it as a JAR/WAR)
+RUN mvn clean package -DskipTests
 
 # Stage 2: Runtime stage
 FROM openjdk:17-jdk-slim
 
+# Set the working directory in the runtime stage
+WORKDIR /app
+
 # Expose the application port
 EXPOSE 8080
 
-# Copy the built jar file from the build stage
-COPY --from=build /app/target/yt-scrapper.jar app.jar
+# Copy the built artifact from the build stage (adjust the path for WAR if needed)
+COPY --from=build /build/target/yt-scrapper.jar ./yt-scrapper.jar
 
 # Run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "yt-scrapper.jar"]
+
+
+
+
+# Stage 1: Build stage
+# FROM ubuntu:latest AS build
+
+# Update the package repository
+# RUN apt-get update
+
+#  Install OpenJDK 17 and Maven
+# RUN apt-get install openjdk-17-jdk maven -y
+
+# Set the working directory
+# WORKDIR /app
+
+# Copy the source code into the container
+# COPY . .
+
+# # Build the Spring Boot application
+# RUN ./mvn package -DskipTests
+
+# Stage 2: Runtime stage
+# FROM openjdk:17-jdk-slim
+
+# # Expose the application port
+# EXPOSE 8080
+
+#  Copy the built jar file from the build stage
+# COPY --from=build /app/target/yt-scrapper.jar app.jar
+
+#  Run the application
+# ENTRYPOINT ["java", "-jar", "app.jar"]
